[gd_scene load_steps=8 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("Knight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Horse/HorseCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spear:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -20, 0 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Knight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Horse/HorseCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spear:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.07575, 16.0365 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 28, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32.0217, 8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/left = SubResource( 1 )
anims/right = SubResource( 2 )

[node name="Horse" type="Area2D" parent="."]
collision_mask = 64
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Horse" type="ColorRect" parent="Horse"]
margin_left = -32.0
margin_top = 9.53674e-07
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.976471, 0.984314, 0.0196078, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HorseCollision" type="CollisionShape2D" parent="Horse"]
position = Vector2( 8, 16 )
shape = SubResource( 3 )

[node name="Knight" type="Area2D" parent="."]
position = Vector2( -16, -8 )
collision_layer = 32
collision_mask = 16
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Knight" type="ColorRect" parent="Knight"]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = 16.0
color = Color( 0.0392157, 0.184314, 0.980392, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knight"]
self_modulate = Color( 0.52549, 0.137255, 0.537255, 1 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spear" type="Area2D" parent="."]
position = Vector2( 20, 0 )
collision_layer = 8
collision_mask = 4

[node name="SpearSprite" type="ColorRect" parent="Spear"]
margin_left = -28.0
margin_top = -4.0
margin_right = 28.0
margin_bottom = 4.0
color = Color( 0.819608, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spear"]
position = Vector2( 0, 9.53674e-07 )
shape = SubResource( 5 )

[node name="JumpTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="PhysicCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Horse" to="." method="_on_Horse_area_entered"]
[connection signal="body_entered" from="Spear" to="." method="_on_Spear_body_entered"]
